# Hecate-26-RobotDevKit

./: .gitignore  CLAUDE.md  README.en.md  README.md  Restore.md  index.html  package.json  pnpm-lock.yaml
docs/: HI12_IMU_Data_Parsing_Reference.md  RS00_Full_Command_Reference.md  RS00_MIT_Control_Reference.md  RS00_MOTOR_SPEC.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  motor_protocol.rs  protocol.rs  serial.rs  state.rs  udp.rs
src/components/charts/: RealtimeChart.tsx
src/components/console/: CommandConsole.tsx
src/components/dashboard/: DataDashboard.tsx
src/components/layout/: AppNavbar.tsx
src/components/motor/: CanFrameLog.tsx  MotorChart.tsx  MotorControlPanel.tsx  MotorDashboard.tsx  MotorParamsPanel.tsx  MotorToolbar.tsx
src/components/toolbar/: ConnectionToolbar.tsx
src/components/viewer3d/: AttitudeViewer.tsx
src/hooks/: use-imu-data.ts  use-motor-data.ts
src/pages/: HomePage.tsx
src/pages/imu-debug/: ImuDebugPage.tsx
src/pages/motor-debug/: MotorSelectPage.tsx
src/pages/motor-debug/rs00/: RS00DebugPage.tsx
src/stores/: imu-store.ts  motor-store.ts
src/types/: imu.ts  motor.ts
