[package]
name = "hecate26-robot-devkit"
version = "1.0.0"
description = "Hecate-26 RobotDevKit - Robot Development & Debugging Toolkit"
authors = ["you"]
edition = "2021"

[lib]
name = "hecate26_robot_devkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
log = "0.4"
env_logger = "0.11"
